2016-06-21  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2016-06-21 trunk r237639.

	PR target/30417
	* config/avr/gen-avr-mmcu-specs.c (print_mcu):
	[*link_data_start]: Wrap -Tdata into %{!Tdata:...}.
	[*link_text_start]: Wrap -Ttext into %{!Ttext:...}.

2016-06-21  Georg-Johann Lay  <avr@gjlay.de>

	PR target/71103
	* config/avr/avr.md (movqi): Only handle loading subreg:qi of
	constant addresses if can_create_pseudo_p.

2016-06-20  Georg-Johann Lay  <avr@gjlay.de>
	    Pitchumani Sivanupandi  <pitchumani.s@atmel.com>

	Backport from 2016-06-20 trunk r237589, r236558.

	PR target/71103
	* config/avr/avr.md (movqi): Handle loading subreg:qi (const,
	symbol_ref,label_ref).

2016-06-16  Jakub Jelinek  <jakub@redhat.com>

	PR target/71554
	* config/i386/i386.md (setcc + movzbl peephole2): Use reg_set_p.
	(setcc + and peephole2): Likewise.

	Backported from mainline
	2015-04-29  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (setcc+movzbl peephole2): Check also clobbered
	reg.
	(setcc+andl peephole2): Ditto.

2016-06-15  Andreas Tobler  <andreast@gcc.gnu.org>

	Backported from mainline
	2016-06-14  Andreas Tobler  <andreast@gcc.gnu.org>

	* config/arm/freebsd.h: Only enable unaligned access for armv6 on
	FreeBSD 11 and above.

2016-06-13  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71505
	* tree-vect-data-refs.c (vect_analyze_data_ref_accesses): Make
	assert match comment.

2016-06-13  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backport from mainline
	2016-06-13  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR target/71379
	* config/s390/s390.c (s390_expand_builtin): Increase MAX_ARGS by
	one.

2016-06-07  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2016-06-07  Peter Bergner  <bergner@vnet.ibm.com>

	* doc/invoke.texi (RS/6000 and PowerPC Options): Document -mhtm and
	-mno-htm.

2016-06-07  Uros Bizjak  <ubizjak@gmail.com>

	PR target/71389
	* config/i386/i386.c (ix86_avx256_split_vector_move_misalign):