@@ -1,3 +1,8 @@
+2016-06-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/71693
+	* gcc.c-torture/compile/pr71693.c: New test.
+
 2016-06-27  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/70673
